--- a/index.html
+++ b/index.html
@@ -6,33 +6,46 @@
      <title>my google</title>
     </head>
     <body>
-        <div id="header">
-           <div id="far_left">
-              <a href="url">about</a>
-              <a href="url">store</a>
-           </div>
-           <div id="middle">
-                
-           </div>
-           <div id="far_right">
-              <div id="dots">
-                <svg focusable="false" viewBox="0 0 24 24">
-                  <path
-                    d="M6,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM16,6c0,1.1 0.9,2 2,2s2,-0.9 2,-2 -0.9,-2 -2,-2 -2,0.9 -2,2zM12,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z">
-                  </path>
-                </svg>
-              </div>
-              <div id="letter_d">
-               <img src="d_within_red_circle.png" alt="d in red square">
-              </div>
-           </div>
-        </div>
-        <div id="content">
+        <form action="https://www.google.com/search" method="GET" role="search">
+            <div id="header">
+                <div id="far_left">
+                    <a href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">about</a>
+                    <a href="https://store.google.com/US?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US">store</a>
+                </div>
+                <div id="middle">
 
-        </div>
-        <div id="footer">
+                </div>
+                <div id="far_right">
+                    <div id="dots">
+                        <svg focusable="false" viewBox="0 0 24 24">
+                            <path
+                                d="M6,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM16,6c0,1.1 0.9,2 2,2s2,-0.9 2,-2 -0.9,-2 -2,-2 -2,0.9 -2,2zM12,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z">
+                            </path>
+                        </svg>
+                    </div>
+                    <div id="letter_d">
+                        <img src="d_within_red_circle.png" alt="d in red square">
+                    </div>
+                </div>
+            </div>
+            <div id="content">
+                <div id="logo">
+                    <img src="google_logo.png" alt="google logo">
+                </div>
+                <div id="search_box">
+                    <input id="search" type="search">
+                </div>
+                <div id="buttons">
+                    <button id="search_button">Search</button>
+                    <button id="lucky_button">I'm feeling lucky</button>
+                </div>
 
-        </div>
+            </div>
+            <div id="footer">
+                <span id="carbon_text">carbon neutral since 2017</span>
+            </div>
+        </form>
+        
     </body>
 
 </html>
